# customer-support-chatbot

./: README.md
a2a-agent/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
a2a-agent/app/: __init__.py  __main__.py  agent.py  airline_client.py  executor.py
airline-api/: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
airline-api/app/: __init__.py  airline_state.py  main.py
airline-api/app/dynamodb/: EXAMPLES.md  README.md  __init__.py  airline_state.py  manage_airline_db.py  utils.py  yandex_iam.py
chatkit-agent/: .env.example  .gitignore  README.md  entrypoint.sh  pyproject.toml
chatkit-agent/app/: __init__.py  agent.py  airline_client.py  chatkit_server.py  main.py  memory_store.py
chatkit-agent/app/dynamodb/: EXAMPLES.md  README.md  __init__.py  manage_dynamodb.py  store.py  utils.py  yandex_iam.py
frontend/: .env.example  .gitignore  README.md  index.html  vite.config.ts
frontend/src/components/: Home.tsx
frontend/src/hooks/: useCustomerContext.ts
frontend/src/lib/: config.ts
